# static_initialization_fiasco

./: CMakeLists.txt  README.md  libA.cpp  libA.hpp  libA_apple.cpp  libA_apple.hpp  libA_apple_registered.cpp  libA_backend_registry.hpp  libA_banana.cpp  libA_banana.hpp  libA_banana_registered.cpp  libA_kiwi.cpp  libA_kiwi.hpp  libA_orange.cpp  libA_orange.hpp  libA_registry.hpp  main.cpp
